--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ lint-results.json
 e2e-results.json
 yarn-error.log
 playwright-report/
+axe-report/
 
 # Caches
 .cache
@@ -30,7 +31,6 @@ coverage
 
 # nyc test coverage
 .nyc_output
-.nyc_a11y_output
 
 # Snapshot directory of Cypress Image Diff
 __diff_output__
