--- a/.github/workflows/pull_request_packages.yml
+++ b/.github/workflows/pull_request_packages.yml
@@ -50,6 +50,40 @@ jobs:
           token: ${{ secrets.DEVTOOLS_GITHUB_TOKEN }}
           filters: .github/file-filters.yml
 
+  fetch_base_and_head:
+    name: Fetch base and head commit
+    runs-on: ubuntu-latest
+    needs: changed_files
+    if: ${{ needs.changed_files.outputs.package_vkui == 'true' }}
+    outputs:
+      HEAD: ${{ env.HEAD }}
+      BASE: ${{ env.BASE }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: refs/pull/${{ github.event.pull_request.number }}/merge
+
+      # см. https://github.com/actions/checkout/issues/1169
+      - name: Set safe directory
+        run: git config --global --add safe.directory /__w/VKUI/VKUI
+
+      - name: Fetch proper base and head commit SHAs
+        run: |
+          git fetch --no-tags --prune --no-recurse-submodules --depth=$((${{ github.event.pull_request.commits }} + 1)) origin ${{ github.event.pull_request.head.sha }}
+          git fetch --no-tags --prune --no-recurse-submodules --depth=10 origin ${{ github.event.pull_request.base.sha }}
+          git checkout --progress --force ${{ github.event.pull_request.head.sha }}
+
+          while [[ -n $(git rev-list shallow ^${{ github.event.pull_request.base.sha }}) ]]
+          do
+            git fetch --no-tags --prune --no-recurse-submodules --deepen=10 origin ${{ github.event.pull_request.base.sha }}
+          done
+
+          base=$(git rev-list ${{ github.event.pull_request.head.sha }} ^${{ github.event.pull_request.base.sha }} | tail --lines 1 | xargs -I {} git rev-parse {}~1)
+
+          echo "BASE=$base" >> $GITHUB_ENV
+          echo "HEAD=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
+
   linters:
     runs-on: ubuntu-latest
     name: Run linters
@@ -88,18 +122,30 @@ jobs:
           path: lint-results.json
 
   test:
-    name: Call reusable unit tests workflow
+    name: Run unit tests
     uses: ./.github/workflows/reusable_workflow_test.yml
     with:
       ref: refs/pull/${{ github.event.pull_request.number }}/merge
 
   test_e2e:
     if: ${{ needs.changed_files.outputs.package_vkui == 'true' }}
-    needs: changed_files
-    name: Call reusable e2e tests workflow
+    needs:
+      - changed_files
+      - fetch_base_and_head
+    name: Run e2e tests for HEAD
     uses: ./.github/workflows/reusable_workflow_test_e2e.yml
     with:
-      ref: refs/pull/${{ github.event.pull_request.number }}/merge
+      ref: ${{ needs.fetch_base_and_head.outputs.HEAD }}
+
+  test_e2e_base:
+    if: ${{ needs.changed_files.outputs.package_vkui == 'true' }}
+    needs:
+      - changed_files
+      - fetch_base_and_head
+    name: Run e2e tests for BASE
+    uses: ./.github/workflows/reusable_workflow_test_e2e.yml
+    with:
+      ref: ${{ needs.fetch_base_and_head.outputs.BASE }}
 
   analyze_bundle_size:
     if: ${{ needs.changed_files.outputs.package_vkui == 'true' }}
@@ -139,7 +185,9 @@ jobs:
       - changed_files
       - linters
       - test
+      - fetch_base_and_head
       - test_e2e
+      - test_e2e_base
     runs-on: ubuntu-latest
     name: Report CI results
     steps:
@@ -158,10 +206,10 @@ jobs:
         if: ${{ needs.changed_files.outputs.package_vkui == 'true' }}
         uses: actions/download-artifact@v3
         with:
-          name: playwright-report
+          name: playwright-report ${{ needs.fetch_base_and_head.outputs.HEAD }}
           path: playwright-report/
 
-      - name: Upload Playwright Report
+      - name: Upload Playwright Report S3
         if: ${{ needs.changed_files.outputs.package_vkui == 'true' }}
         uses: VKCOM/gh-actions/VKUI/s3@main
         with:
